force-app/main/default/objects/IntegratedEnquiry__c/fields/Reason_for_request__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_request__c</fullName>
    <label>Reason for request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Meeting</fullName>
            </value>
            <value>
                <fullName>Need to sent to client</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pitch Presentation</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>