force-app/main/default/objects/IntegratedEnquiry__c/fields/Recovery__c.field-meta.xml
<CustomField>
    <fullName>Recovery__c</fullName>
    <label>Recovery%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>