force-app/main/default/objects/IntegratedEnquiry__c/fields/SectorCoordinator__c.field-meta.xml
<CustomField>
    <fullName>SectorCoordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sector Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Integrated_Enquiries8</relationshipName>
    <type>Lookup</type>
</CustomField>