force-app/main/default/objects/IntegratedEnquiry__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indian PHB (Listed)</fullName>
            </value>
            <value>
                <fullName>MNC</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Large Private</fullName>
            </value>
            <value>
                <fullName>Largest Listed</fullName>
            </value>
            <value>
                <fullName>Listed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PE Fund</fullName>
            </value>
            <value>
                <fullName>PE Investee</fullName>
            </value>
            <value>
                <fullName>S M Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>