force-app/main/default/objects/IntegratedEnquiry__c/fields/ShortSummary__c.field-meta.xml
<CustomField>
    <fullName>ShortSummary__c</fullName>
    <label>Short Summary</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>