force-app/main/default/objects/IntegratedEnquiry__c/fields/Solution1__c.field-meta.xml
<CustomField>
    <fullName>Solution1__c</fullName>
    <label>Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SolutionValues</valueSetName>
    </valueSet>
</CustomField>