force-app/main/default/objects/IntegratedEnquiry__c/fields/Specify_details_of_support_required__c.field-meta.xml
<CustomField>
    <fullName>Specify_details_of_support_required__c</fullName>
    <label>Specify details of support required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>