force-app/main/default/objects/IntegratedEnquiry__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identify/Create Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>