force-app/main/default/objects/IntegratedEnquiry__c/fields/SubexpertiesForDuplicateRule__c.field-meta.xml
<CustomField>
    <fullName>SubexpertiesForDuplicateRule__c</fullName>
    <label>SubexpertiesForDuplicateRule</label>
    <type>TextArea</type>
</CustomField>