force-app/main/default/objects/IntegratedEnquiry__c/fields/SubSector__c.field-meta.xml
<CustomField>
    <fullName>SubSector__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SubSector</valueSetName>
    </valueSet>
</CustomField>