force-app/main/default/objects/IntegratedEnquiry__c/fields/Support_required__c.field-meta.xml
<CustomField>
    <fullName>Support_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support required</label>
    <type>Checkbox</type>
</CustomField>