force-app/main/default/objects/IntegratedEnquiry__c/fields/SupportRequired__c.field-meta.xml
<CustomField>
    <fullName>SupportRequired__c</fullName>
    <label>SupportRequired</label>
    <type>TextArea</type>
</CustomField>