force-app/main/default/objects/IntegratedEnquiry__c/fields/TentativeFee__c.field-meta.xml
<CustomField>
    <fullName>TentativeFee__c</fullName>
    <label>Tentative Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>