force-app/main/default/objects/IntegratedEnquiry__c/fields/Total_Commercial_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Commercial_Amount__c</fullName>
    <label>Total Commercial Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>