force-app/main/default/objects/IntegratedEnquiry__c/fields/Type_of_content__c.field-meta.xml
<CustomField>
    <fullName>Type_of_content__c</fullName>
    <label>Type of content</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case studies &amp; testimonials</fullName>
            </value>
            <value>
                <fullName>Credentials</fullName>
            </value>
            <value>
                <fullName>CV</fullName>
            </value>
            <value>
                <fullName>Member Firm Information</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sector Insights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>