force-app/main/default/objects/IntegratedEnquiry__c/fields/Type_of_document__c.field-meta.xml
<CustomField>
    <fullName>Type_of_document__c</fullName>
    <label>Type of document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pitch Presentation</fullName>
            </value>
            <value>
                <fullName>Placemat</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>