force-app/main/default/objects/IntegratedEnquiry__c/fields/TypeOfDocument__c.field-meta.xml
<CustomField>
    <fullName>TypeOfDocument__c</fullName>
    <label>TypeOfDocument</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Pitchdeck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>