force-app/main/default/objects/IntegratedEnquiry__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Record Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ClientEnquiryRelations</relationshipName>
    <type>Lookup</type>
</CustomField>