force-app/main/default/objects/IntegratedEnquiry__c/fields/YearFounded__c.field-meta.xml
<CustomField>
    <fullName>YearFounded__c</fullName>
    <label>Year Founded</label>
    <type>Date</type>
</CustomField>