force-app/main/default/objects/IntegratedEnquiry__c/fields/YoungCSL__c.field-meta.xml
<CustomField>
    <fullName>YoungCSL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Young CSL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Integrated_EnquiriesBi8A</relationshipName>
    <type>Lookup</type>
</CustomField>