force-app/main/default/objects/IntegratedEnquiry__c/listViews/LRM_Team_IntegratedEnquiry.listView-meta.xml
<ListView>
    <fullName>LRM_Team_IntegratedEnquiry</fullName>
    <filterScope>Queue</filterScope>
    <label>LRM Team</label>
    <queue>LRM_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>