force-app/main/default/objects/IntegratedEnquiry__c/listViews/Marcom_Team_IntegratedEnquiry.listView-meta.xml
<ListView>
    <fullName>Marcom_Team_IntegratedEnquiry</fullName>
    <filterScope>Queue</filterScope>
    <label>Marcom Team</label>
    <queue>Marcom_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>