force-app/main/default/objects/IntegratedEnquiry__c/listViews/Today_s_created.listView-meta.xml
<ListView>
    <fullName>Today_s_created</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s created</label>
</ListView>